welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:34: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:37: error: expected start of definition
	override def forward()  {
                 ^ZigZag:40: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:43: error: expected start of definition
	override def backward() {
                 ^ZigZag:46: error: Unmatched closing brace '}' ignored here
}
^